syntax = "proto3";
package ssf;

import "ssf/sample.proto";

message Empty {}

service SSFGRPC {
  rpc SendSpan(ssf.SSFSpan) returns (Empty);
}
